--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Revou Travel Agent's</title>
         <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon.ico">
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/24-07-23-apridew/assets/css/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
