--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Revou Travel Agent's</title>
-        <link rel="icon" type="image/x-icon" href="/revou-fundamental-course/24-07-23-apridew/assets/imgs/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico">
         <link rel="stylesheet" href="/revou-fundamental-course/24-07-23-apridew/assets/css/style.css">
 </head>
 <body>
