--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div id="home">
         <div class="logo" >
-            <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/logo.png" width="50px" height="50px">
+            <img src="assets/imgs/logo.png" width="50px" height="50px">
         </div>
         <div class="navbar">
             <a class="topnav" href="#home">Home</a>
