--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Revou Travel Agent's</title>
         <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico">
-        <link rel="stylesheet" href="/revou-fundamental-course/24-07-23-apridew/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -34,15 +34,15 @@
           <table>
             <tr>
               <figure class="container-slider fade">
-                <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/slide 1.jpg" alt="image1" width="900px"/>
+                <img src="assets/imgs/slide 1.jpg" alt="image1" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/slide 2.jpg" alt="image2" width="900px"/>
+                <img src="assets/imgs/slide 2.jpg" alt="image2" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/slide 3.jpg" alt="image3" width="900px"/>
+                <img src="assets/imgs/slide 3.jpg" alt="image3" width="900px"/>
               </figure>
             </tr>
             <tr>
