--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 2.jpg" alt="image2" width="900px"/>
+                <img src="assets/imgs/slide-2.jpg" alt="image2" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 3.jpg" alt="image3" width="900px"/>
+                <img src="assets/imgs/slide-3.jpg" alt="image3" width="900px"/>
               </figure>
             </tr>
             <tr>
@@ -86,7 +86,7 @@
     </section>
     <h4 class="quote">"Liburan jadi menyenangkan bersama Revou Travel Agent's."</h4>
     <div class="usericon">
-        <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/user.png" alt="user" class="image" width="50px" height="50px">
+        <img src="assets/imgs/user.png" alt="user" class="image" width="50px" height="50px">
     </div>
     <div class="userdesc">
         Florence Hughes<br>
@@ -105,21 +105,21 @@
             <!-- First Row -->
             <div class="row">
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/star.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/star.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row1">Indonesia</p>
                         <p class="desc2-row1">Explore Indonesia, enjoy the wonders of its natural beauty.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/star.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/star.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row1">Japan</p>
                         <p class="desc2-row1">Experience the charm of tradition and modern technology in Japan.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/star.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/star.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row1">Singapore</p>
                         <p class="desc2-row1">Indulge in the luxury and modernity of Singapore.</p>
@@ -134,21 +134,21 @@
             <!-- Second Row -->
             <div class="row">
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/idea.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/idea.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row2">Thailand</p>
                         <p class="desc2-row2">Celebrate art, architecture, and delicious cuisine in Thailand.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/idea.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/idea.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row2">France</p>
                         <p class="desc2-row2">Discover the romantic allure of Paris and the beauty of the French countryside.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/idea.png" alt="Icon" class="icon">
+                    <img src="assets/imgs/idea.png" alt="Icon" class="icon">
                     <div>
                         <p class="desc1-row2">Turki</p>
                         <p class="desc2-row2">Immerse yourself in the stunning natural beauty of Turki.</p>
@@ -175,7 +175,7 @@
 <!-- Footer -->
 <footer>
     <div class="logo">
-        <img src="/revou-fundamental-course/24-07-23-apridew/assets/imgs/logo.png" alt="Logo Travel Agent">
+        <img src="assets/imgs/logo.png" alt="Logo Travel Agent">
     </div>
     <div class="footer-content">
         <p>
