--- a/index.html
+++ b/index.html
@@ -190,6 +190,6 @@
         </p>
     </div>
 </footer>
-<script src="/revou-fundamental-course/24-07-23-apridew/assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
