--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <table>
             <tr>
               <figure class="container-slider fade">
-                <img src=".assets/imgs/slide 1.Jpg" alt="image1" width="900px"/>
+                <img src="24-07-23-apridew/assets/imgs/slide 1.Jpg" alt="image1" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
