--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 2.Jpg" alt="image2" width="900px"/>
+                <img src="assets/imgs/slide 2.jpg" alt="image2" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 3.Jpg" alt="image3" width="900px"/>
+                <img src="assets/imgs/slide 3.jpg" alt="image3" width="900px"/>
               </figure>
             </tr>
             <tr>
