--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
           <table>
             <tr>
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 1.jpg" alt="image1" width="900px"/>
+                <img src="assets/imgs/slide 1.jpg" alt="" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 2.jpg" alt="image2" width="900px"/>
+                <img src="assets/imgs/slide 2.jpg" alt="" width="900px"/>
               </figure>
     
               <figure class="container-slider fade">
-                <img src="assets/imgs/slide 3.jpg" alt="image3" width="900px"/>
+                <img src="assets/imgs/slide 3.jpg" alt="" width="900px"/>
               </figure>
             </tr>
             <tr>
